Fix potential inline layouts color leakage.
Victor Porton reported this, with an fxnote stuck to a subsection with the
amsbook class. The subsection's title was colored as well. This seems to
occur when the subsection's text follows the title on the same line, and is
probably related to some parsing weirdness where a group would disappear.
I fixed this by half-blindly using \textcolor instead of \color directly.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1482,8 +1482,9 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
-% \item[v4.3] Separate inline notes from the text they follow, suggested by
-%   Victor Porton.\\
+% \item[v4.3] Separate inline notes from the text they follow, suggested
+%   by Victor Porton.\\
+%   Fix potential inline layouts color leakage, reported by Victor Porton.\\
 %   Fix several parsing problems when passing optional arguments
 %   containing brackets, thanks to Joseph Wright and Lars Madsen.
 % \item[v4.2] Improve Danish translation, thanks to Lars Madsen.\\
@@ -4356,7 +4357,7 @@
     \raggedright\@fxuseface{margin}\color{fx#1}\ignorespaces#3!}}
 \renewcommand*\FXLayoutInline[3]{%
   \@fxdocolon{#3}%
-  { \@fxuseface{inline}\color{fx#1}\ignorespaces#3\@fxcolon#2}}
+  { \textcolor{fx#1}{\@fxuseface{inline}\ignorespaces#3\@fxcolon#2}}}
 \renewcommand*\FXLayoutIndex[3]{%
   \iffx@mode@multiuser%
     \index{***@\fixmeindexname:%
@@ -4412,7 +4413,7 @@
     \raggedright\@fxuseface{margin}\color{fx#1}!\@fxsignature}}
 \renewcommand*\FXLayoutInline[3]{%
   \@fxdosig{#3}%
-  { \@fxuseface{inline}\color{fx#1}#2\@fxsignature}}
+  { \textcolor{fx#1}{\@fxuseface{inline}#2\@fxsignature}}}
 \renewcommand*\FXLayoutIndex[3]{%
   \@fxdosig{#3}%
   \iffx@mode@multiuser%
