Cosmetic fixes in the History section.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1489,11 +1489,10 @@
 %   Separate inline notes from the text they follow, suggested by Victor
 %   Porton.\\
 %   Fix potential inline layouts color leakage, reported by Victor Porton.\\
-%   Fix several parsing problems when passing optional arguments
-%   containing brackets, thanks to Joseph Wright and Lars Madsen.
+%   Fix several parsing problems when passing optional arguments containing
+%   brackets, thanks to Joseph Wright and Lars Madsen.
 % \item[v4.2] Improve Danish translation, thanks to Lars Madsen.\\
-%   Fix buglet in \cs{@wrindex} redefinition, reported by Norman
-%   Gray.\\
+%   Fix buglet in \cs{@wrindex} redefinition, reported by Norman Gray.
 % \item[v4.1] 8 new PDF-specific annotation layouts.\\
 %   New annotation layout: \texttt{marginnote}, suggested by S\'ebastien
 %   Mengin.\\
