Update the History section.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1494,7 +1494,9 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
-% \item[v4.3] Update support for the \komascript classes by using the
+% \item[v4.3] Add a paragraph about the duplication of notes in captions, upon
+%   exchange with Kreuvf.\\
+%   Update support for the \komascript classes by using the
 %   \texttt{tocbasic} interface when available, reported by Dirk Surmann.\\
 %   Separate inline notes from the text they follow, suggested by Victor
 %   Porton.\\
