Update header of the THANKS file.

--- a/THANKS
+++ b/THANKS
@@ -1,7 +1,9 @@
 				 THANK YOU!
 
 
-Copyright (C) 2007, 2009, 2013 Didier Verna
+Copyright (C) 2007, 2009, 2013, 2017 Didier Verna
+
+Author: Didier Verna <didier@didierverna.net>
 
 This file is part of FiXme.
 
