--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 				 ABOUT FIXME
 
 
-Copyright (C) 1998-2002, 2004-2007, 2009, 2013 Didier Verna
+Copyright (C) 1998-2002, 2004-2007, 2009, 2013, 2017 Didier Verna
+
+Author: Didier Verna <didier@didierverna.net>
 
 This file is part of FiXme.
 
