Improve the summary.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -151,7 +151,7 @@
 %
 %   \fx is designed to ease and automate the process of managing collaborative
 %   annotations, by offering a set of predefined note levels and layouts, the
-%   possibility to register multiple note authors, to reference annotations by
+%   possibility to register multiple authors, to reference annotations by
 %   listing and indexing \etc \fx is extensible, giving you the possibility to
 %   create new layouts or even complete ``themes'', and also comes with
 %   support for \auctex.
