Use just Emacs as a generic term for all Emacsen.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -118,7 +118,7 @@
 % \newcommand\ie{\textit{i.e.}\xspace}
 % \newcommand\komascript{\textsc{Koma}-Script\xspace}
 % \newcommand\auctex{AUC-\TeX\xspace}
-% \newcommand\emacs{\textsf{[X]Emacs}\xspace}
+% \newcommand\emacs{\textsf{Emacs}\xspace}
 %
 % \newcommand\fx{\fixmelogo\xspace}
 % \newcommand\packagecopyright{%
