Fix small documentation typo.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2022,7 +2022,7 @@
 % \end{macro}
 %
 % \subsubsection{Built-in layouts}
-% Let's deal start with the early layouts, and continue with the late ones.
+% Let's start with the early layouts, and continue with the late ones.
 % \paragraph{Margin}
 % \begin{layout}[noprint]{margin}
 % \begin{face}{margin}
