--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,8 @@ FiXme consists of the files listed in the file `README.md'.
 * Version 4.4
 ** Handle existing yet empty lox files properly
 meaning, don't actually typeset an empty list of corrections.
+** Don't update the lox file in final mode
+avoiding potential typesetting artifacts, reported by Lars Madsen.
 
 * Version 4.3
 ** Add a paragraph about the duplication of notes in captions
